<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AudioDetailsActivity">

    <Button
        android:id="@+id/adDashboardBtn"
        android:layout_width="307dp"
        android:layout_height="71dp"
        android:text="@string/ToDashboard"
        android:textSize="20sp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.93" />

    <ImageButton
        android:id="@+id/dsSideMenu4"
        android:layout_width="46dp"
        android:layout_height="45dp"
        android:background="null"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.046"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.036"
        app:srcCompat="@drawable/ic_baseline_dehaze_24" />

    <ImageButton
        android:id="@+id/dsUserAccount4"
        android:layout_width="46dp"
        android:layout_height="45dp"
        android:background="null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.953"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.036"
        app:srcCompat="@drawable/account_circle_fill0_wght400_grad0_opsz48" />

    <ImageView
        android:id="@+id/dsRespalyzerLogo4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/respalyzer_logo_official"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/adTitle"
        android:layout_width="204dp"
        android:layout_height="47dp"
        android:text="@string/adName"
        android:textColor="@color/red"
        android:textSize="33sp"
        android:textStyle="bold"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.153" />

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="42dp"
        android:layout_height="45dp"
        android:background="null"
        app:srcCompat="@android:drawable/ic_media_play"
        tools:layout_editor_absoluteX="175dp"
        tools:layout_editor_absoluteY="166dp" />

    <TextView
        android:id="@+id/audioSize"
        android:layout_width="66dp"
        android:layout_height="20dp"
        android:text="@string/adSize"
        android:textSize="17sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="166dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="71dp"
        android:layout_height="22dp"
        android:text="@string/adLength"
        android:textSize="17sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="308dp"
        tools:layout_editor_absoluteY="166dp" />

    <TextView
        android:id="@+id/adBgHeading"
        android:layout_width="177dp"
        android:layout_height="31dp"
        android:text="@string/adBgHeading"
        android:textColor="@color/red"
        android:textSize="20sp"
        android:textStyle="bold"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.074"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.359" />

    <TextView
        android:id="@+id/adBgData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/adBgData"
        android:textSize="17sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="288dp" />

</androidx.constraintlayout.widget.ConstraintLayout>