<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".IllnessActivity">
    <ImageButton
        android:id="@+id/dsSideMenu3"
        android:layout_width="46dp"
        android:layout_height="45dp"
        android:background="null"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.046"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.036"
        app:srcCompat="@drawable/ic_baseline_dehaze_24" />

    <ImageButton
        android:id="@+id/dsUserAccount3"
        android:layout_width="46dp"
        android:layout_height="45dp"
        android:background="null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.953"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.036"
        app:srcCompat="@drawable/account_circle_fill0_wght400_grad0_opsz48" />

    <ImageView
        android:id="@+id/dsRespalyzerLogo3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/respalyzer_logo_official"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/iMedicalCentreBtn"
        android:layout_width="310dp"
        android:layout_height="80dp"

        android:width="250dp"
        android:text="@string/arMedicalCentre"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.676" />

    <Button
        android:id="@+id/iEmergencyContact"
        android:layout_width="310dp"
        android:layout_height="80dp"

        android:width="250dp"
        android:text="@string/EmergencyContacts"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.823" />

    <TextView
        android:id="@+id/arIllness"
        android:layout_width="244dp"
        android:layout_height="57dp"
        android:gravity="center"
        android:text="@string/arIllness"
        android:textColor="@color/red"
        android:textSize="22sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="79dp"
        tools:layout_editor_absoluteY="153dp" />

    <TextView
        android:id="@+id/arIllnessAdvice"
        android:layout_width="239dp"
        android:layout_height="82dp"
        android:gravity="center"
        android:text="@string/arIllnessAdvice"
        android:textSize="22sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="79dp"
        tools:layout_editor_absoluteY="222dp" />

    <Button
        android:id="@+id/iLearnMore"
        android:layout_width="310dp"
        android:layout_height="80dp"

        android:width="250dp"
        android:text="@string/arLearnMore"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.527" />


</androidx.constraintlayout.widget.ConstraintLayout>